--- a/assets/hds/sass/components/@health/_health-hero.scss
+++ b/assets/hds/sass/components/@health/_health-hero.scss
@@ -150,7 +150,7 @@
       position: relative;
 
       .health-hero__content {
-        z-index: 9999;
+        z-index: 400;
         backdrop-filter: none;
 
         @include AU-media(md) {
@@ -178,7 +178,7 @@
           position: absolute;
           background: linear-gradient(90deg, var(--hero-bg) 0%, var(--hero-bg) var(--hero-content-width--md), transparent calc(var(--hero-content-width--md) + 30%), transparent 100%);
           inset: 0;
-          z-index: 8888;
+          z-index: 300;
         }
 
         @include AU-media(lg) {
