--- a/src/scss/site-theme/components/_band.scss
+++ b/src/scss/site-theme/components/_band.scss
@@ -13,7 +13,7 @@
             @include AU-media(md) {
                 margin-bottom: 0;
                 margin-top: -2.5rem;
-                z-index: 9999;
+                z-index: 500;
                 padding-top: 1.5rem;
 
                 .health-band__container {
